{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 325,
  "lineage": "31fdaf04-eb6d-8f44-4229-70653f8ee4a9",
  "resources": [
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:internet-gateway/igw-0c475cfcf7b8c9da4",
            "id": "igw-0c475cfcf7b8c9da4",
            "owner_id": "551826566720",
            "tags": {
              "Name": "Terraform Gateway"
            },
            "tags_all": {
              "Name": "Terraform Gateway"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:551826566720:loadbalancer/app/alb-web-terraform/c91474748321c0bb",
            "arn_suffix": "app/alb-web-terraform/c91474748321c0bb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-web-terraform-555653225.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:551826566720:loadbalancer/app/alb-web-terraform/c91474748321c0bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-web-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f62a99186d18a5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03151190e44bb5ce5"
              },
              {
                "subnet_id": "subnet-0bcbcdaa0e8638113"
              }
            ],
            "subnets": [
              "subnet-03151190e44bb5ce5",
              "subnet-0bcbcdaa0e8638113"
            ],
            "vpc_id": "vpc-0ec61629594469b2e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.AWSInfra.aws_security_group.lb_sg",
            "module.AWSInfra.aws_subnet.web1",
            "module.AWSInfra.aws_subnet.web2",
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-alb-lis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:551826566720:listener/app/alb-web-terraform/c91474748321c0bb/d127d56c090abc92",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:551826566720:targetgroup/tf-lb-tg/15a71440c2a17594",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:551826566720:listener/app/alb-web-terraform/c91474748321c0bb/d127d56c090abc92",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:551826566720:loadbalancer/app/alb-web-terraform/c91474748321c0bb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AWSInfra.aws_lb.alb_web",
            "module.AWSInfra.aws_lb_target_group.lb-tg",
            "module.AWSInfra.aws_security_group.lb_sg",
            "module.AWSInfra.aws_subnet.web1",
            "module.AWSInfra.aws_subnet.web2",
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:551826566720:targetgroup/tf-lb-tg/15a71440c2a17594",
            "arn_suffix": "targetgroup/tf-lb-tg/15a71440c2a17594",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:551826566720:targetgroup/tf-lb-tg/15a71440c2a17594",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "tf-mrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b623faddbdfeb13",
            "original_route_table_id": "rtb-0a30b69ee0de7c7df",
            "route_table_id": "rtb-0048f1c0d13c04860",
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_internet_gateway.gw_terraform",
            "module.AWSInfra.aws_route_table.tf-rt",
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:route-table/rtb-0048f1c0d13c04860",
            "id": "rtb-0048f1c0d13c04860",
            "owner_id": "551826566720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c475cfcf7b8c9da4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Route Table"
            },
            "tags_all": {
              "Name": "Terraform Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AWSInfra.aws_internet_gateway.gw_terraform",
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:security-group/sg-07b7d343cdc6125d2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b7d343cdc6125d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "551826566720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:security-group/sg-07f62a99186d18a5f",
            "description": "Security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f62a99186d18a5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_security_group",
            "name_prefix": "",
            "owner_id": "551826566720",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg-asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:security-group/sg-0f23bf9040c87a10d",
            "description": "Security group for auto scalling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f23bf9040c87a10d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg-asg",
            "name_prefix": "",
            "owner_id": "551826566720",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:subnet/subnet-0d490ee7d0574e1cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d490ee7d0574e1cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551826566720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:subnet/subnet-0e20c06d02f2a53fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e20c06d02f2a53fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551826566720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:subnet/subnet-02a24c93b354d3aff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a24c93b354d3aff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551826566720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:subnet/subnet-0bcbcdaa0e8638113",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcbcdaa0e8638113",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551826566720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "web1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:subnet/subnet-03151190e44bb5ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03151190e44bb5ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551826566720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "web2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ec61629594469b2e"
          },
          "dependencies": [
            "module.AWSInfra.aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "module": "module.AWSInfra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551826566720:vpc/vpc-0ec61629594469b2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fdd3f3a60795209e",
            "default_route_table_id": "rtb-0a30b69ee0de7c7df",
            "default_security_group_id": "sg-055236ca60660ba0d",
            "dhcp_options_id": "dopt-02f41cb23e7e0f1d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec61629594469b2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a30b69ee0de7c7df",
            "owner_id": "551826566720",
            "tags": {
              "Name": "terraformvpc"
            },
            "tags_all": {
              "Name": "terraformvpc"
            }
          }
        }
      ]
    }
  ]
}